statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  serviceName: "vaultwarden"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: vaultwarden
        image: docker.io/vaultwarden/server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: "/data"
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"

  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
