service.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: vaultwarden
   namespace: farhoodliquor-com
   labels:
     app: vaultwarden
spec:
  clusterIP: None
  #type: LoadBalancer
  #externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: vaultwarden
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: farhoodliquor-com
spec:
  selector:
    matchLabels:
      app: vaultwarden
  serviceName: "vaultwarden"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: vaultwarden
        image: docker.io/vaultwarden/server:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: vaultwarden-config
          mountPath: "/data"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
      volumes:
      - name: vaultwarden-config
        persistentVolumeClaim:
          claimName: vaultwarden-config
