ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: farhoodliquor-com
spec:
  rules:
  - host: vault.farhoodliquor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  vaultwarden
            port:
              number: 80

  tls:
  - hosts:
    - streaming.farhoodliquor.com
    secretName: farhoodliquor-com-cert-letsencrypt-prod
